--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="We promote the idea of integrating oriental traditional furniture into a modern or contemporary home, enriching it with color, tecture and contrast" />
-    <title>When traditional furniture meets modern home</title>
+    <meta name="description" content="We promote the idea of integrating oriental traditional furniture into a modern or contemporary home, enriching it with color, texture and contrast" />
+    <title>When Oriental Traditional Furniture meets Modern Home</title>
   </head>
   <body>
     <div id="root"></div>
